# hexchat

./: AGENTS.md  meson.build  meson_options.txt  readme.md
plugins/: meson.build
plugins/fishlim/: fish.c
plugins/lua/: lua.c
plugins/perl/: perl.c
plugins/sysinfo/: format.c  meson.build
src/: meson.build
src/common/: cfgfiles.c  chanopt.c  ctcp.c  dcc.c  fe.h  hexchat-plugin.h  hexchat.c  hexchat.h  ignore.c  inbound.c  inet.h  meson.build  network.c  notify.c  outbound.c  plugin-timer.c  plugin.c  plugin.h  proto-irc.c  server.c  servlist.c  ssl.c  text.c  typedef.h  url.c  util.c  util.h
src/fe-gtk/: banlist.c  chanlist.c  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fkeys.c  fkeys.h  gtkutil.c  gtkutil.h  joind.c  maingui.c  menu.c  meson.build  palette.c  palette.h  plugin-tray.c  rawlog.c  setup.c  sexy-spell-entry.c  xtext.c
src/fe-gtk4/: chanlist.c  fe-gtk4.c  fe-gtk4.h  meson.build  prefs.c  servlistgui.c
src/fe-text/: fe-text.c
